convert web socket into http

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "snutt",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "dependencies": {
     "mime": "",
-    "socket.io": "",
-		"restler": ""
+		"restler": "",
+    "routes": "",
+    "underscore": "",
+    "node-jquery-deparam": ""
   }
 }
