add mkdirp to packages.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"restler": "",
     "routes": "",
     "underscore": "",
-    "node-jquery-deparam": ""
+    "node-jquery-deparam": "",
+    "mkdirp": ""
   }
 }
