Attached the winston logging library

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "underscore": "",
 		"querystring" : "",
     "node-jquery-deparam": "",
-    "mkdirp": ""
+    "mkdirp": "",
+		"winston": ""
   }
 }
