--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "snutt",
   "version": "1.0.0",
   "dependencies": {
-    "mime": "",
-		"restler": "",
-    "routes": "",
-    "underscore": "",
-		"querystring" : "",
-    "node-jquery-deparam": "",
-    "mkdirp": "",
-    "winston": "",
-    "mongodb": "",
-    "mongoose": "",
-    "grunt": "",
-    "cookies": ""
+    "mime": "1.2.11",
+		"restler": "3.2.2",
+    "routes": "2.0.0",
+    "underscore": "1.7.0",
+    "node-jquery-deparam": "0.0.3",
+    "mkdirp": "0.5.0",
+    "winston": "0.8.3",
+    "mongodb": "1.4.28",
+    "mongoose": "3.8.21",
+    "grunt": "0.4.5",
+    "cookies": "0.5.0",
+    "ejs": "2.1.4"
   }
 }
