--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "3.8.21",
     "grunt": "0.4.5",
     "cookies": "0.5.0",
-    "ejs": "2.1.4"
+    "ejs": "2.1.4",
+    "icalendar": "0.7.1"
   }
 }
