--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt": "0.4.5",
     "cookies": "0.5.0",
     "ejs": "2.1.4",
-    "icalendar": "0.7.1"
+    "icalendar": "0.7.1",
+    "pm2": "*"
   }
 }
