modified server config

--- a/etc/snutt_nginx_conf/snutt.conf
+++ b/etc/snutt_nginx_conf/snutt.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name snutt.kr;
+    server_name snutt.kr www.snutt.kr;
 
     location / {
       proxy_set_header Host $http_host;
